--- a/css/estilos.css
+++ b/css/estilos.css
@@ -155,9 +155,6 @@ button:hover {
     background-color: #555;
 }
 
-/* Añade o ajusta este bloque de código en tu archivo estilos.css */
-
-/* Asegurar que el footer se mantenga abajo */
 html, body {
     height: 100%;
     margin: 0;
@@ -170,16 +167,15 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center; /* Asegura que el contenido principal esté centrado verticalmente */
+    justify-content: center; 
 }
 
-/* Footer más abajo */
+
 footer {
-    margin-top: auto; /* Empuja el footer hacia abajo */
-    width: 100%; /* Asegura que el footer ocupe todo el ancho */
+    margin-top: auto; 
+    width: 100%; 
 }
 
-/* Estilos para el formulario de contacto */
 .contacto {
     width: 80%;
     margin: 0 auto;
